--- a/style.css
+++ b/style.css
@@ -11,22 +11,17 @@ body {
     background-color: #fff;
 }
 
-.main-img img{
+.main-img img,
+.imgs img{
     width: 100%;
     background-size: 100% 100%;
+    background-position: 100%;
 }
 
 
 .imgs img{
-    width: 100%;
-    height: 100%;
-    background-size: 100% 100%;
-    cursor: pointer;
-    background-repeat: no-repeat;
-    background-position: 100%;
+   cursor: pointer;
 }
-
-/* 37 */
 
 .imgs{
     display: grid;
