--- a/style.css
+++ b/style.css
@@ -25,6 +25,23 @@ body {
 
 .imgs{
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: repeat(4, auto);
     grid-gap: 3px;
+}
+
+@keyframes fadeIn{
+    to {
+        opacity: 1;
+    }
+}
+.fade-in {
+    opacity: 0;
+    animation: fadeIn .5s ease-in 1 forwards;
+}
+
+/* media Queries*/
+@media(max-width:600px){
+    .imgs {
+        grid-template-columns: auto auto;
+    }
 }
